Added create action to Users controller, test for user signup.

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,5 @@
 <div class="container text-center">
+  <%= render 'users/errors', object: @user %>
   <%= form_for(@user, :html => {:class => 'form-horizontal'}) do |f| %>
     <div class="form-group">
       <%= f.label :name, class: 'control-label col-md-3' %>
