--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -22,7 +22,7 @@
     </div>
 
     <div class="form-group">
-      <%= f.submit "Sign up!", class: "btn btn-primary" %>
+      <%= f.submit yield(:button_text), class: "btn btn-primary" %>
     </div>
   <% end %>
 </div>
