Added Sessions routes and login form.

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,8 @@
       <li><%= link_to 'Notes', '#' %></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li class=""><%= link_to 'Sign Up', signup_url %></li>
+      <li><%= link_to 'Sign Up', signup_url %></li>
+      <li><%= link_to 'Log In', login_url %></li>
     </ul>
   </div>
 </nav>
