--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,8 +9,13 @@
       <li><%= link_to 'Notes', '#' %></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><%= link_to 'Sign Up', signup_url %></li>
-      <li><%= link_to 'Log In', login_url %></li>
+      <% if logged_in? %>
+        <li><%= link_to current_user.name, edit_user_url(current_user) %></li>
+        <li><%= link_to 'Log Out', logout_url, method: 'delete' %></li>
+      <% else %>
+        <li><%= link_to 'Sign Up', signup_url %></li>
+        <li><%= link_to 'Log In', login_url %></li>
+      <% end %>
     </ul>
   </div>
 </nav>
